rustcc/tests/input/lexer/invalid/backslash.c
// RUN: ${{rustcc}} --print-tokens
// EXPECT-FAILURE

/* A single backslash is not a valid token. */
\